card/modal overflow of text elements fixed

--- a/src/components/QuizModal/QuizModal.css
+++ b/src/components/QuizModal/QuizModal.css
@@ -36,6 +36,11 @@
   padding: 10px 5px;
 }
 
+.modal .info .title,
+.modal .info .description {
+  overflow: auto;
+}
+
 .modal > .buttons {
   width: 100%;
   display: flex;
